# https://pypi.org/project/setupcfg-generator/
[metadata]
name = travis-env
version = 2019.4.13
url = https://github.com/looking-for-a-job/travis-env.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = travis

[options]
install_requires = 
	Requests
	click
	public
	setuptools
packages = 
	travis_env
